--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/codedecode?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.url = jdbc:mysql://localhost:3306/employee?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = Bunny@03
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto= update
+# hibernate properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
