--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+# database properties
 spring.datasource.url = jdbc:mysql://localhost:3306/employee?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = Bunny@03
